--- a/proyecto final/platilla inicial/style.css
+++ b/proyecto final/platilla inicial/style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     padding: 0%;
     margin: 0;    font-family: 'Oswald', sans-serif;
+    
 }
 body{
     background: url(/ima/asdadasd.png);
@@ -21,7 +22,7 @@ body{
 /*HEADER*/
 header{
     background: var(--background-color);
-    width: 100%;
+    width: 1665px;
     height: 80px;
 } 
 
@@ -77,7 +78,8 @@ h1{
 background-color: black;
     margin: 0;
     height: 800px;
-    
+    width: 1665px;
+    display: flex;
 }
 .nombre{
     position: relative;
@@ -89,15 +91,15 @@ top: 100px;
     
 }
 .imagen-1 img{
-position: relative;
-left: 850px;
-bottom: 20px;
+position: absolute;
+left: 750px;
+bottom: 40px;
 }
 .imagen-2{
-    position: relative;
-    bottom: 610px;
-    left: 990px;
-    width: 1000px;
+    position: absolute;
+    bottom: -10px;
+    left: 890px;
+
 }
 .BOTON{
     text-decoration: none;
@@ -105,7 +107,38 @@ bottom: 20px;
     color:var(--text-color);
     font-size: 40px;
     border-radius: 10px;
+    position: absolute;
+    left: 1400px;
+    top: 780px;
+}
+/*CONTENEDOR 2*/
+.contenedor-2{
+border: 2px dashed steelblue;
+    background-image: url(/ima/fondo-3.jpg);
+position: relative;
+height: 800px;
+width: 1665px;
+display: flex;
+}
+.Omkara{
+    
+    display: flex;
+    position:absolute ;
+  background-position: 100%;
+  left: 600px;
+  width: 900px ;
+}
+
+.BOTON-2{
+    text-decoration: none;
+    background-color: var(--background-color);
+    color:var(--text-color);
+    font-size: 40px;
+    border-radius: 10px;
+    position: absolute;
+left: 1400px;
+    top: 650px;
+}
+.prueba{
     position: relative;
-    left: 1450px;
-    bottom: 650px;
 }
